# ZDIMagic

./: .gitignore  README.md
ZDIFlasher/: .project  ZDIFlasher Debug.launch  ZDIFlasher Release.launch  ZDIFlasher.ioc
ZDIFlasher/App/Inc/: app_button.h  app_commander.h  app_usb.h  app_zdi.h  zdi.h  zdi_constants.h  zdi_driver.h  zdi_timing.h  zdi_types.h
ZDIFlasher/App/Src/: app_button.c  app_commander.c  app_usb.c  app_zdi.c  zdi.c  zdi_driver.c
ZDIFlasher/Core/Inc/: main.h  stm32f4xx_it.h
ZDIFlasher/Core/Src/: gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c
ZDIFlasher/USB_DEVICE/App/: usbd_cdc_if.c
ZDIMagician/: CMakeLists.txt  Command.cpp  Command.h  Commander.cpp  Commander.h  MagicException.cpp  MagicException.h  Magician.cpp  Magician.h  Parameter.cpp  Parameter.h  USBSerial.cpp  USBSerial.h  main.cpp  quick_arg_parser.hpp
